--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,7 +20,6 @@ body
       .main
         height: calc(100vh - 58px)
         max-height: calc(100vh - 58px)
-        //color: white
         .row
           max-height: inherit
           .map-col > div
@@ -56,19 +55,30 @@ body
             padding-top: 10px
             max-height: inherit
             overflow: auto
-            .settings
-              .buttons-col
-                padding: 5px 0
-                display: flex
-                justify-content: space-around
-                .settings-list
-                  width: 70%
-              .ward-list
-                .entry-row
+            position: relative
+            .not-selected
+              position: absolute
+              top: 50%
+              left: 50%
+              font-size: 28px
+              transform: translate(-50%, -50%)
+            .section-name
+              margin-top: 10px
+            .cluster-info
+              .row
+                hr
+                  width: 100%
+                .col
+                  position: relative
+                  border-radius: 5px
+                  margin: 10px
+                  height: 100px
+                  background-color: gray
                   display: flex
-                  flex-direction: row
-                  justify-content: space-around
-                  margin: 5px
-                  padding: 5px
-                .entry-row:hover
-                  border: 1px solid black
+                  flex-direction: column
+                  .name
+                    font-style: italic
+                    position: absolute
+                  .data
+                    margin: auto
+                    font-size: 32px
