--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -43,6 +43,9 @@ body
             .map-wrap
               width: 100%
               height: calc(100vh - 58px)
+              @media (max-width: 992px)
+                max-height: 60vh
+                height: 60vh
               #map
                 height: inherit
                 width: 100%
@@ -65,6 +68,9 @@ body
             box-shadow: -3px 10px 15px rgba(0, 0, 0, 0.2)
             background: linear-gradient(to bottom, #343A3F, #2A2D33)
             overflow: auto
+            @media(max-width: 992px)
+              max-height: none
+              overflow: hidden
             .buttons
               width: 100%
               border: 1px solid #212529
@@ -95,8 +101,6 @@ body
                 display: flex
                 flex-direction: row
                 button
-                  //background-color: #212529
-                  //border: 1px solid black
                   &:first-child
                     border-radius: 10px 0 0 0
                   &:last-child
@@ -112,11 +116,10 @@ body
                       border-radius: 5px
                       height: 120px
                       background-color: #212529
-                      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3)  /* Soft shadow */
+                      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3)
                       display: flex
                       flex-direction: column
                       justify-content: center
-                      //align-items: center
                       .name
                         font-size: 20px
                         font-style: italic
